--- a/roles/podman_containers/tasks/podman_volume.yml
+++ b/roles/podman_containers/tasks/podman_volume.yml
@@ -9,3 +9,4 @@
     state: "{{ item.state | default('present') }}"
     debug: "{{ item.debug | default(false) }}"
   loop: "{{ podman_volumes }}"
+  when: podman_volumes is defined
