--- a/roles/setup_alp_workloads/tasks/setup_grafana.yml
+++ b/roles/setup_alp_workloads/tasks/setup_grafana.yml
@@ -11,7 +11,7 @@
 
 - name: Start and enable Grafana using systemd
   ansible.builtin.service:
-    name: "{{ workload.name }}"
+    name: grafana
     state: started
     enabled: true
 
