--- a/roles/setup_pcp/tasks/control_client.yml
+++ b/roles/setup_pcp/tasks/control_client.yml
@@ -1,12 +1,7 @@
 ---
-- name: Delete existing container image
-  containers.podman.podman_image:
-    name: "{{ pcp_container_name }}"
-    state: absent
-
 - name: Retrieve image for PCP
   containers.podman.podman_image:
-    name: "{{ pcp_container_name }}"
+    name: "{{ pcp_image }}"
     state: present
 
 - name: Deploy collector containers for recording metrics from remote systems
